2008-05-09  Satoshi Konno <skonno@cybergarage.org>
	* Changed typedef.h about BOOL type using Objective-C for XCode.
	* Changed cg_cond_signal() using SetEvent() instead of WaitForSingleObject for WIN32 platform.

2008-04-22  Satoshi Konno <skonno@cybergarage.org>
	* Added cg_upnp_controlpoint_getdevice() to get a device by the index.
	* Added cg_upnp_devicelist_get() to get a device by the index.

2008-03-17  Satoshi Konno <skonno@cybergarage.org>
	* Changed not to define BOOL type using Objective-C for XCode.
	* Added to check IP_PKTINFO into configure.in.
	* Changed the following functions using void parameter instead of CgService not to conflict the prototype defines.
	   cg_upnp_event_notify_request_setpropertysetnode() and cg_upnp_subscriber_notifyall() using GCC v4.0.
	* Fixed cg_socket_setid() to disable the IPPROTO_IP option using XCode 3.0.
	* Fixed other errors using XCode 3.0.

2007-12-24  Satoshi Konno <skonno@cybergarage.org>
	* Added CG_UPNP_ST_URN and cg_upnp_st_isurn() to <ccontrol.h>.
	* Changed cg_upnp_device_ssdpmessagereceived() using cg_upnp_st_isurn() instead of cg_upnp_st_isurndevice() to find non standard UPnP devices.
	* Changed cg_upnp_service_ssdpmessagereceived() using cg_upnp_st_isurn() instead of cg_upnp_st_isurnservice() to find non standard UPnP devices.
	* Fixed cg_upnp_device_getservicebycontrolurl() to abort when the service_url is null.
	* Fixed cg_string_naddvalue() to comipler using other compilers normally.
	* Added cg_upnp_statevariable_setvaluewithoutnotify() not to send the updated value for other devices which subscribe the service of the state variable.
	* Deprecated cg_upnp_service_notifyallstatevariables(). Use cg_upnp_service_notifyall which can send the events individually or collectively.

2007-12-13  Aapo Makela <aapo.makela@nokia.com>
	* Multiple patches to fix crashes in out-of-memory situations
	* Implemented more efficient reallocation policy in CgString