@@ -67,6 +67,9 @@ char *TEST_DEVICE_DESCRIPTION =
 " 			<service>\n"
 " 				<serviceType>" TEST_DEVICE_SERVICE_TYPE "</serviceType>\n"
 " 				<serviceId>urn:upnp-org:serviceId:SwitchPower.1</serviceId>\n"
+" 				<SCPDURL>/service/power/description.xml</SCPDURL>\n"
+" 				<controlURL>/service/power/control</controlURL>\n"
+" 				<eventSubURL>/service/power/eventSub</eventSubURL>\n"
 " 			</service>\n"
 " 		</serviceList>\n"
 " 		<presentationURL>/presentation</presentationURL>\n"
